# aidbny

./: .gitignore  README.md  pyproject.toml  requirements.txt
resolutions/: __init__.py  ai.py  app.py  cli.py  models.py  storage.py  styles.tcss
resolutions/screens/: __init__.py
resolutions/widgets/: __init__.py  ai_chat.py  goal_card.py  sparkline.py  stats_bar.py
