[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolutions"
version = "0.1.0"
description = "AI-powered personal resolution tracker CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "textual>=0.40.0",
  "typer[all]>=0.9.0",
  "anthropic>=0.25.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "python-dateutil>=2.8.0",
]

[project.scripts]
res = "resolutions.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
